--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -7,6 +7,7 @@
 * <<mongo-template.query.distinct,Distinct queries>> for imperative and reactive Template API.
 * <<mongo.mongo-3.validation,`validator` support for collections>>.
 * <<mongo.jsonSchema,`$jsonSchema` support>> for queries and collection creation.
+* <<changes-streams, Change Stream support>> for imperative and reactive drivers.
 
 [[new-features.2-0-0]]
 == What's new in Spring Data MongoDB 2.0
