--- a/src/main/asciidoc/reference/reactive-mongo-repositories.adoc
+++ b/src/main/asciidoc/reference/reactive-mongo-repositories.adoc
@@ -64,10 +64,10 @@ public interface ReactivePersonRepository extends ReactiveSortingRepository<Pers
 }
 ----
 <1> The method shows a query for all people with the given lastname. The query will be derived parsing the method name for constraints which can be concatenated with `And` and `Or`. Thus the method name will result in a query expression of `{"lastname" : lastname}`.
-<2> The method shows a query for all people with the given firstname once the firstname becomes available via the given `Publisher`.
+<2> The method shows a query for all people with the given firstname once the firstname is emitted via the given `Publisher`.
 <3> Use `Pageable` to pass on offset and sorting parameters to the database.
-<4> Find a single entity for given criteria. Errors on non unique results.
-<5> Unless <4> the first entity is returned no matter what.
+<4> Find a single entity for given criteria. Completes with `IncorrectResultSizeDataAccessException` on non unique results.
+<5> Unless <4> the first entity is always emitted even if the query yields more result documents.
 ====
 
 For JavaConfig use the `@EnableReactiveMongoRepositories` annotation. The annotation carries the very same attributes like the namespace element. If no base package is configured the infrastructure will scan the package of the annotated configuration class.
