DATAMONGO-1880 - Support ClientSession when resolving DBRefs.
Make sure to use the very same session when resolving dbrefs and pass on errors on closed sessions.

--- a/src/main/asciidoc/reference/client-session.adoc
+++ b/src/main/asciidoc/reference/client-session.adoc
@@ -40,6 +40,8 @@ session.close()                                              <4>
 <3> Important! Do not forget to close the session.
 ====
 
+WARNING: When dealing with ``DBRef``s, especially lazily loaded ones, it is essential to **not** close the `ClientSession` before all data is loaded.
+
 The reactive counterpart uses the very same building blocks as the imperative one.
 
 .ClientSession with ReactiveMongoOperations.
