--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -10,7 +10,8 @@
 * <<mongo.jsonSchema,`$jsonSchema` support>> for queries and collection creation.
 * <<change-streams, Change Stream support>> for imperative and reactive drivers.
 * Tailable cursors for imperative driver.
-* <<mongo.sessions, MongoDB Session>> support for the imperative and reactive Template API.
+* <<mongo.sessions, MongoDB 3.6 Session>> support for the imperative and reactive Template API.
+* <<mongo.transactions, MongoDB 4.0 Transaction>> support and MongoDB specific transaction manager implementation.
 
 [[new-features.2-0-0]]
 == What's new in Spring Data MongoDB 2.0
