--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,21 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 1.10.11.RELEASE (2018-04-04)
+-----------------------------------------------
+* DATAMONGO-1915 - Remove explicit declaration of Jackson library versions.
+* DATAMONGO-1909 - Fix typo in tests.
+* DATAMONGO-1903 - Align database name check in SimpleMongoDbFactory with MongoDB limitations.
+* DATAMONGO-1898 - Verify handling of enums in MappingMongoConverter.
+* DATAMONGO-1896 - In case of inheritance, MongoRepository.saveAll(…) does not insert elements into the aggregate collection.
+* DATAMONGO-1871 - AggregationExpression rendering does not consider nested property aliasing.
+* DATAMONGO-1870 - Skip parameter not working in MongoTemplate#remove(Query, Class).
+* DATAMONGO-1860 - Mongo count operation called twice in QuerydslMongoPredicateExecutor.findAll(Predicate, Pageable).
+* DATAMONGO-1858 - Fix line endings.
+* DATAMONGO-1857 - Release 1.10.11 (Ingalls SR11).
+* DATAMONGO-1834 - Add support for aggregation operators $dateFromString, $dateFromParts and $dateToParts.
+
+
 Changes in version 2.0.5.RELEASE (2018-02-28)
 ---------------------------------------------
 * DATAMONGO-1882 - Release 2.0.5 (Kay SR5).
