--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -5,6 +5,7 @@
 == What's new in Spring Data MongoDB 2.1
 * Cursor-based aggregation execution.
 * <<mongo-template.query.distinct,Distinct queries>> for imperative and reactive Template API.
+* Support for Map/Reduce through reactive Template API.
 * <<mongo.mongo-3.validation,`validator` support for collections>>.
 * <<mongo.jsonSchema,`$jsonSchema` support>> for queries and collection creation.
 * <<change-streams, Change Stream support>> for imperative and reactive drivers.
